add fonts and screenLoading

--- a/app.json
+++ b/app.json
@@ -4,7 +4,6 @@
     "slug": "RNCourse",
     "version": "1.0.0",
     "orientation": "portrait",
-    
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -28,6 +27,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
