--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "~19.0.1",
     "expo": "~50.0.6",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "^12.7.2",
     "expo-media-library": "~15.9.1",
